--- a/src/app/pages/cashier-service/carousel/carousel.component.html
+++ b/src/app/pages/cashier-service/carousel/carousel.component.html
@@ -1,5 +1,11 @@
 <nz-carousel nzAutoPlay>
-  <div nz-carousel-content *ngFor="let index of array">
-    <h3>{{ index }}</h3>
+  <div nz-carousel-content *ngFor="let index of array" class="flex">
+    <img
+      nz-image
+      width="350px"
+      height="350px"
+      nzSrc="https://product.hstatic.net/1000075078/product/combo-3-hop-ca-phe-sua-da-hoa-tan-dam-vi_5bfc3fb23ebd4ec88f17c08794617b96_large.jpg"
+      alt=""
+    />
   </div>
 </nz-carousel>
