--- a/src/app/pages/cashier-service/cashier-service.component.html
+++ b/src/app/pages/cashier-service/cashier-service.component.html
@@ -1,29 +1,85 @@
 <div>
-  <app-carousel></app-carousel>
-  <nz-card nzTitle="Sản phẩm">
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
+  <div class="w-full flex justify-center align-middle">
+    <div style="width: 350px; height: 350px;">
+      <app-carousel></app-carousel>
     </div>
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
+  </div>
+  <div class="w-full mt-4">
+    <nz-card nzTitle="Sản phẩm">
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+      <div nz-card-grid [ngStyle]="gridStyle">
+        <app-card-item></app-card-item>
+      </div>
+    </nz-card>
+  </div>
+  <div>
+    <div>
+      <label for="">Cà Phê Việt Nam</label>
     </div>
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
+    <div class="flex justify-around align-middle flex-row">
+      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
+        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
+      </nz-card>
+      <ng-template #coverTemplate>
+        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
+      </ng-template>
+      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
+        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
+      </nz-card>
+      <ng-template #coverTemplate>
+        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
+      </ng-template>
+      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
+        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
+      </nz-card>
+      <ng-template #coverTemplate>
+        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
+      </ng-template>
     </div>
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
+  </div>
+  <div>
+    <div>
+      <label for="">Cà Phê Việt Nam</label>
     </div>
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
+    <div class="flex justify-around align-middle flex-row">
+      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
+        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
+      </nz-card>
+      <ng-template #coverTemplate>
+        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
+      </ng-template>
+      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
+        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
+      </nz-card>
+      <ng-template #coverTemplate>
+        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
+      </ng-template>
+      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
+        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
+      </nz-card>
+      <ng-template #coverTemplate>
+        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
+      </ng-template>
     </div>
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
-    </div>
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
-    </div>
-    <div nz-card-grid [ngStyle]="gridStyle">
-      <app-card-item></app-card-item>
-    </div>
-  </nz-card>
+  </div>
 </div>
