--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
 .menu-sidebar {
   position: relative;
   z-index: 10;
-  min-height: 100vh;
+  min-height: 400vh;
   box-shadow: 2px 0 6px rgba(0,21,41,.35);
 }
 
@@ -76,5 +76,5 @@ nz-content {
 .inner-content {
   padding: 24px;
   background: #fff;
-  height: 100%;
+  height: 400vh;
 }
