--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
 .menu-sidebar {
   position: relative;
   z-index: 10;
-  min-height: 400vh;
+  min-height: 100vh;
   box-shadow: 2px 0 6px rgba(0,21,41,.35);
 }
 
@@ -74,7 +74,23 @@ nz-content {
 }
 
 .inner-content {
+  overflow-y:auto;
   padding: 24px;
   background: #fff;
-  height: 400vh;
+  height: 90vh;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #1890ff;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
 }
