--- a/src/app/pages/cashier-service/cashier-service.component.html
+++ b/src/app/pages/cashier-service/cashier-service.component.html
@@ -4,82 +4,23 @@
       <app-carousel></app-carousel>
     </div>
   </div>
-  <div class="w-full mt-4">
-    <nz-card nzTitle="Sản phẩm">
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
+  <div *ngIf="categories">
+    <div *ngFor="let cate of categories">
+      <div class="my-8">
+        <p for="" class="text-2xl font-bold antialiased ">{{cate.name}}</p>
       </div>
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
+      <div class="flex justify-around align-middle flex-row mt-8">
+
       </div>
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
+      <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+        <div nz-col class="gutter-row" [nzSpan]="4" *ngFor="let product of getProductByCategory(cate.id, products)">
+          <div class="inner-box">
+            <app-card-item-cate
+              [imageUrl]="product.image_path" [title]="product.name" [description]="product.price.toString()">
+            </app-card-item-cate>
+          </div>
+        </div>
       </div>
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
-      </div>
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
-      </div>
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
-      </div>
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
-      </div>
-      <div nz-card-grid [ngStyle]="gridStyle">
-        <app-card-item></app-card-item>
-      </div>
-    </nz-card>
-  </div>
-  <div>
-    <div>
-      <label for="">Cà Phê Việt Nam</label>
-    </div>
-    <div class="flex justify-around align-middle flex-row">
-      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
-        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
-      </nz-card>
-      <ng-template #coverTemplate>
-        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
-      </ng-template>
-      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
-        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
-      </nz-card>
-      <ng-template #coverTemplate>
-        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
-      </ng-template>
-      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
-        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
-      </nz-card>
-      <ng-template #coverTemplate>
-        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
-      </ng-template>
-    </div>
-  </div>
-  <div>
-    <div>
-      <label for="">Cà Phê Việt Nam</label>
-    </div>
-    <div class="flex justify-around align-middle flex-row">
-      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
-        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
-      </nz-card>
-      <ng-template #coverTemplate>
-        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
-      </ng-template>
-      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
-        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
-      </nz-card>
-      <ng-template #coverTemplate>
-        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
-      </ng-template>
-      <nz-card nzHoverable style="width:320px" [nzCover]="coverTemplate">
-        <nz-card-meta nzTitle="Hồng Trà Latte Macchiato" nzDescription="55.000 đ"></nz-card-meta>
-      </nz-card>
-      <ng-template #coverTemplate>
-        <img alt="example" src="https://product.hstatic.net/1000075078/product/hong-tra-latte_618293_400x400_8e7d0a023bfb4537913425ec6048e59b_large.jpg" />
-      </ng-template>
     </div>
   </div>
 </div>
