--- a/src/app/pages/invoice-manager/invoice-manager.component.scss
+++ b/src/app/pages/invoice-manager/invoice-manager.component.scss
@@ -1,19 +1,12 @@
-.send-request {
-  margin-bottom: 16px;
+.steps-content {
+  margin-top: 16px;
+  border: 1px dashed #e9e9e9;
+  border-radius: 6px;
+  background-color: #fafafa;
+  min-height: 200px;
+  padding-top: 80px;
 }
 
-.send-request span {
-  margin-left: 8px;
-}
-
-[nz-form] {
-  max-width: 600px;
-}
-
-.phone-select {
-  width: 70px;
-}
-
-.register-are {
-  margin-bottom: 8px;
+.inner-box {
+  padding: 8px 0;
 }
