--- a/src/app/pages/invoice-manager/invoice-manager.component.html
+++ b/src/app/pages/invoice-manager/invoice-manager.component.html
@@ -1,5 +1,6 @@
 <button nz-button [nzType]="'primary'" (click)="showModal()" class="my-10"><span>Tạo hóa đơn</span></button>
-<nz-modal [(nzVisible)]="isVisible" nzTitle="Thêm thông tin chi tiết hóa đơn" [nzWidth]="'80%'" (nzOnCancel)="handleCancel()">
+<nz-modal [(nzVisible)]="isVisible" nzTitle="Thêm thông tin chi tiết hóa đơn" [nzWidth]="'80%'"
+  (nzOnCancel)="handleCancel()">
   <ng-container *nzModalContent>
     <nz-steps [nzCurrent]="current" (nzIndexChange)="onIndexChange($event)">
       <nz-step nzTitle="Chọn thức uống và món ăn" [nzDisabled]="disable">
@@ -70,6 +71,31 @@
             </div>
           </div>
         </div>
+        <div *ngIf="current == 2">
+          <h1 class="title-h1" style=" margin-bottom: 24px;">Samwyle Coffee</h1>
+          <p class="title" style=" margin-bottom: 24px;">Địa chỉ: 29 Trần Quang Diệu Extended St., Phường 13, Quận. 10,
+            Ho Chi Minh City</p>
+          <p class="title" style=" margin-bottom: 24px;">Điện thoại: (84-511) 722350</p>
+          <p class="title" style=" margin-bottom: 24px;">Bàn đặt: Bàn số {{validateForm.value.table_id}}</p>
+          <nz-descriptions [nzColumn]="5" nzTitle="Chi tiết">
+            <nz-descriptions-item nzTitle="Stt" [nzSpan]="1"></nz-descriptions-item>
+            <nz-descriptions-item nzTitle="Tên" [nzSpan]="1"></nz-descriptions-item>
+            <nz-descriptions-item nzTitle="Đơn giá" [nzSpan]="1"></nz-descriptions-item>
+            <nz-descriptions-item nzTitle="SL" [nzSpan]="1"></nz-descriptions-item>
+            <nz-descriptions-item nzTitle="Thành tiền" [nzSpan]="1"></nz-descriptions-item>
+          </nz-descriptions>
+          <nz-descriptions [nzColumn]="5" *ngFor="let orl of orderLine; let i = index">
+            <nz-descriptions-item [nzSpan]="1">{{i}}</nz-descriptions-item>
+            <nz-descriptions-item [nzSpan]="1">{{findProduct(products, orl.product_id).name}}</nz-descriptions-item>
+            <nz-descriptions-item [nzSpan]="1">{{orl.price}}.000 đ</nz-descriptions-item>
+            <nz-descriptions-item [nzSpan]="1">{{orl.quantity}}</nz-descriptions-item>
+            <nz-descriptions-item [nzSpan]="1">{{orl.amount}}.000 đ</nz-descriptions-item>
+          </nz-descriptions>
+          <p class="title-end" style=" margin-bottom: 24px;">Tổng cộng: {{validateForm.value.total}}.000 đ</p>
+          <p class="title-end" style=" margin-bottom: 24px;">Phí tax: {{validateForm.value.tax}} %</p>
+          <p class="title-end" style=" margin-bottom: 24px;">Tổng dịch vụ: {{validateForm.value.total * (100 + validateForm.value.tax) / 100}}.000
+            đ</p>
+        </div>
       </form>
     </div>
   </ng-container>
@@ -100,7 +126,7 @@
             <nz-tag [nzColor]="'#1890ff'">Đợi thanh toán</nz-tag>
           </nz-badge>
         </td>
-        <td *ngIf="data.status == 'staff'">
+        <td *ngIf="data.status == 'draft'">
           <nz-badge nzStatus="default">
             <nz-tag [nzColor]="'#d9d9d9'">Đang lên đơn</nz-tag>
           </nz-badge>
@@ -115,11 +141,12 @@
         <td>{{ data.total }}.000 đ</td>
         <td>{{ data.create_date | date:'short' }}</td>
         <td>
-          <a>
+          <a (click)="openUpdateOrderModal(data)">
             <nz-tag [nzColor]="'#52c41a'">Cật nhật</nz-tag>
           </a>
           <nz-divider nzType="vertical"></nz-divider>
-          <a nz-popconfirm nzPopconfirmTitle="Bạn chắc chắn muốn xóa đơn hàng này?" nzPopconfirmPlacement="bottom">
+          <a nz-popconfirm nzPopconfirmTitle="Bạn chắc chắn muốn xóa đơn hàng này?" nzPopconfirmPlacement="bottom"
+            (nzOnConfirm)="deleteOrder(data.id)">
             <nz-tag [nzColor]="'#ff4d4f'">Xóa</nz-tag>
           </a>
         </td>
